# agentic-rag

./: .gitignore  CHAT_EXAMPLE.md  README.md  env.example  gui.py  main.py  pyproject.toml
app/: state.py
app/agents/: generator.py  responder.py  retriever.py  validator.py
app/embeddings/: vector_store.py
app/graph/: rag_graph.py
app/ingestion/: cleaner.py  ocr.py  pdf_loader.py
app/llm/: models.py
